--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,14 +15,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java_version: [1.8, 11]
+        java: [1.8, 11]
             
     steps:
     - uses: actions/checkout@v2
     - name: Set up Java
       uses: actions/setup-java@v1
       with:
-        java-version: ${{ java_version }}
+        java-version: ${{ matrix.java }}
         
     - name: Cache Maven packages
       uses: actions/cache@v2
